--- a/index.html
+++ b/index.html
@@ -9,18 +9,53 @@
     <script src="static/libs/plotly-latest.min.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
     <script type="text/javascript" charset="utf-8">
-     $(document).ready(function() {
-      namespace = '/';
-      var socket = io.connect(location.protocol + '//' + document.domain + ':' + location.port + namespace);
+    $(document).ready(function() {
+        namespace = '/'
+        var socket = io.connect(location.protocol + '//' + document.domain + ':' + location.port + namespace);
 
-      socket.on('connect', function() {
-        socket.emit('my_event', {data: 'I\'m connected!', value: 1}); });
-      });
+        socket.on('json_data', function(msg) {
+        console.log(msg.data);
+        var json_string = jQuery.parseJSON(msg.data);
+        $('#log').append('Received: '+json_string.humidity+ ', ' +json_string.temperature_C+ ', ' +json_string.temperature_F+ ', ' +json_string.ppm+'<br>').html(); });
+
+        $('#buttonVal').click(function(event) {
+            console.log($('#buttonVal').val());
+            socket.emit('start_stop_request',{value: $('#buttonVal').val()});
+            if ($(this).val() == "start") {
+                $(this).val("stop");
+                $(this).text("Stop");
+            }
+            else {
+                $(this).val("start");
+                $(this).text("Start");
+            }
+        return false; });
+        
+        $('#connect').click(function(event) {
+            console.log($('#connect').val());
+            socket.emit('connect_request');
+            return false; });
+        $('#disconnect').click(function(event) {
+            console.log($('#disconnect').val());
+            socket.emit('disconnect_request');
+            return false; });  
+
+      //  socket.on('form#connect', function() {
+     //   socket.emit('connect_request');});
+        
+      //  socket.on('form#disconnect', function() {
+      //  socket.emit('disconnect_request');});
+    });
     </script>
 </head>
 <body>
-<form method="post" id="OPEN">
-    <input type="submit" value="connect">
-</form> 
+    <h1>Senzory! VSADE SAME SENZORY</h1>
+    <p>Hello there!</p>
+    <p>General Kenobi!</p>
+    <button id="connect" type="submit" value="connect">Open</button>
+    <button id="disconnect" type="submit" value="disconnect">Close</button>
+    <button id="buttonVal" type="submit" value="start">Start</button>
+    <h2>Receive:</h2>
+        <div id="log"></div>
 </body>
 </html> 
