--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Nase kuzelne zadanie z najoblubenjsieho predmetu</title>
-    <style type="text/css"></style>
-    <script src="static/libs/jquery-1.11.1.min.js"></script>
-    <script src="static/libs/plotly-latest.min.js"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
-    <script type="text/javascript" charset="utf-8">
+  <title>Monitorovanie a riadenie signálov</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+  <script src="static/libs/plotly-latest.min.js"></script>
+  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
+  <script type="text/javascript" charset="utf-8">
     $(document).ready(function() {
         var x = new Array();
         var y = new Array();
@@ -205,21 +207,150 @@
             return false; });
         });
     </script>
+  <style>
+  .fakeimg {
+    height: 200px;
+    background: #aaa;
+  }
+  </style>
 </head>
 <body>
-    <h1>Senzory! VSADE SAME SENZORY</h1>
-    <p>Hello there!</p>
-    <p>General Kenobi!</p>
-    <button id="connect" type="submit" value="connect">Open</button>
-    <button id="disconnect" type="submit" value="disconnect">Close</button>
-    <button id="delete" type="submit" value="delete">Delete</button>
-    <button id="delete_file" type="submit" value="delete_file">Delete file</button>
-    <button id="buttonVal" type="submit" value="start">Start</button>
-    <button id="load" type="submit" value="load">Load database</button>
-    <button id="load_file" type="submit" value="load_file">Load file</button>
-    <div id="plotdiv" style="width:600px;height:250px;"></div>
-    <div id="plotdiv2" style="width:600px;height:250px;"></div>
-    <h2>Receive:</h2>
+
+<div class="jumbotron text-center" style="margin-bottom:0">
+  <h1>Monitorovanie a riadenie signálov</h1>
+  <p>Záverečné zadanie - Bodorík, Hirjáková</p> 
+</div>
+
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
+  <a class="navbar-brand" href="#">Data</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="collapsibleNavbar">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="#database">Zobrazenie údajov z databázy</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#file">Zobrazenie údajov zo súboru</a>
+      </li>    
+    </ul>
+  </div>  
+</nav>
+<section id="Data">
+  <div class="container" style="margin-top:30px">
+    <div class="row">
+      <div class="col-sm-4">
+        <h2>Buttons</h2>
+        <h5>Click me:</h5>
+        <div class="buttons connect">
+          <button id="connect" type="submit" class="btn btn-info" value="connect">Open</button>
+          <button id="disconnect" type="submit" class="btn btn-info" value="disconnect">Close</button>
+          <button id="buttonVal" type="submit" class="btn btn-info" value="start">Start</button>
+        </div>
+        <h5>Database</h5>
+        <div class="buttons database">
+          <button id="load" type="submit" class="btn btn-info" value="load">Load database</button>
+          <button id="delete" type="submit" class="btn btn-info" value="delete">Delete</button>
+        </div>
+        <h5>File</h5>
+        <div class="buttons database">
+          <button id="load_file" type="submit" class="btn btn-info" value="load_file">Load file</button>
+          <button id="delete_file" type="submit" class="btn btn-info"value="delete_file">Delete file</button>
+        </div>
+        <hr class="d-sm-none">
+      </div>
+      <div class="col-sm-4">
+        <h2>Ploty</h2>
+        <h5>Fences</h5>
+        <div id="plotdiv" style="width:600px;height:250px;"></div>
+        <div id="plotdiv2" style="width:600px;height:250px;"></div>
+      </div>
+      <div class="col-sm-4">
+        <h2>part 3</h2>
+        <h5>Receive:</h5>
         <div id="log"></div>
+      </div>
+    </div>
+  </div>
+</section>  
+<section id="database">
+  <div class="container" style="margin-top:30px">
+    <div class="row">
+      <div class="col-sm-4">
+        <h2>About Me</h2>
+        <h5>Photo of me:</h5>
+        <div class="fakeimg">Fake Image</div>
+        <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+        <h3>Some Links</h3>
+        <p>Lorem ipsum dolor sit ame.</p>
+        <ul class="nav nav-pills flex-column">
+          <li class="nav-item">
+            <a class="nav-link active" href="#">Active</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#">Disabled</a>
+          </li>
+        </ul>
+        <hr class="d-sm-none">
+      </div>
+      <div class="col-sm-4">
+        <h2>TITLE HEADING</h2>
+        <h5>Title description, Dec 7, 2017</h5>
+        <div class="fakeimg">Fake Image</div>
+        <p>Some text..</p>
+        <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+        <br>
+      </div>
+      <div class="col-sm-4">
+        <h2>TITLE HEADING</h2>
+        <h5>Title description, Sep 2, 2017</h5>
+        <div class="fakeimg">Fake Image</div>
+        <p>Some text..</p>
+        <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+      </div>
+      <div class="col-sm-4">
+        <h2>part 3</h2>
+      </div>
+    </div>
+  </div>
+</section>
+<section id="file">
+  <div class="container" style="margin-top:30px">
+    <div class="row">
+      <div class="col-sm-4">
+        <h2>About Me</h2>
+        <h5>Photo of me:</h5>
+        <div class="fakeimg">Fake Image</div>
+        <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+        <h3>Some Links</h3>
+        <p>Lorem ipsum dolor sit ame.</p>
+        <ul class="nav nav-pills flex-column">
+          <li class="nav-item">
+            <a class="nav-link active" href="#">Active</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#">Disabled</a>
+          </li>
+        </ul>
+        <hr class="d-sm-none">
+      </div>
+</section>
+<div class="jumbotron text-center" style="margin-bottom:0">
+  <p>Footer</p>
+</div>
+
 </body>
-</html> 
+</html>
