--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+  <script src ="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
+  <script src = "https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap.min.js"></script>
   <script src="static/libs/plotly-latest.min.js"></script>
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
   <script type="text/javascript" charset="utf-8">
     $(document).ready(function() {
-      $('#dtBasicExample').DataTable();
-      $('.dataTables_length').addClass('bs-select');
+        $('dtBasicExample').DataTable();
         var x = new Array();
         var y = new Array();
         var trace;
@@ -31,7 +32,7 @@
         socket.on('json_data', function(msg) {
         console.log(msg.data);
         var json_string = jQuery.parseJSON(msg.data);
-        $('#log').append('Received: '+json_string.temperature_C+ ', ' +json_string.temperature_F+ ', ' +json_string.humidity+ ', '  +json_string.ppm+'<br>').html();
+        $('#log').append(+json_string.temperature_C+ ', ' +json_string.temperature_F+ ', ' +json_string.humidity+ ', '  +json_string.ppm+'<br>').html();
         x.push(parseFloat(i++));
         x_h.push(parseFloat(j++));
         //pridat podmienku, ci chcem celsius alebo fahrenheit(zmenim 0 na 1)
@@ -82,7 +83,7 @@
             y_h.push(parseFloat(msg.data[i][2]));
             x.push(parseFloat(i));
             x_h.push(parseFloat(j));
-            $('#log2').append('Received: '+msg.data[i][0]+ ', ' +msg.data[i][1]+ ', ' +msg.data[i][2]+  ', ' +msg.data[i][3]+ '<br>').html(); 
+            $('#log2').append(+msg.data[i][0]+ ', ' +msg.data[i][1]+ ', ' +msg.data[i][2]+  ', ' +msg.data[i][3]+ '<br>').html(); 
         }
         //teplota
         trace = {
@@ -125,7 +126,7 @@
         socket.on('file_data', function(msg) {
         console.log(msg.data);
         var json_string = jQuery.parseJSON(msg.data);
-        $('#log3').append('Received: '+json_string.temperature_C+ ', ' +json_string.temperature_F+ ', ' +json_string.humidity+ ', '  +json_string.ppm+'<br>').html();
+        $('#log3').append(+json_string.temperature_C+ ', ' +json_string.temperature_F+ ', ' +json_string.humidity+ ', '  +json_string.ppm+'<br>').html();
         x.push(parseFloat(i++));
         x_h.push(parseFloat(j++));
         //pridat podmienku, ci chcem celsius alebo fahrenheit(zmenim 0 na 1)
@@ -278,17 +279,19 @@
         <table id="dtBasicExample" class="table table-striped table-bordered" cellspacing="0" width="100%">
           <thead>
             <tr>
-              <th class="th-sm">Temperature Celsius
+              <th class="th-sm">C
               </th>
-              <th class="th-sm">Temperature Fahrenheit
+              <th class="th-sm">F
               </th>
-              <th class="th-sm">Humidity
+              <th class="th-sm">Hum
+              </th>
+              <th class="th-sm">ppm
               </th>
             </tr>
           </thead>
-
+          <tbody></tbody>  
         </table>
-        <div id="log"></div>
+        <div class="pre-scrollable" id="log"></div>
       </div>
     </div>
   </div>
@@ -306,7 +309,7 @@
         <div id="plotdiv3" style="width:600px;height:250px;"></div>
         <div id="plotdiv4" style="width:600px;height:250px;"></div>
         <h5 style="margin-top:10%">Receive:</h5>
-        <div id="log2"></div>
+        <div class="pre-scrollable"  id="log2"></div>
         <hr class="d-sm-none">
       </div>
       <div class="col-sm-6" style="margin-bottom:20%">
@@ -318,7 +321,7 @@
         <div id="plotdiv5" style="width:600px;height:250px;"></div>
         <div id="plotdiv6" style="width:600px;height:250px;"></div>
         <h5 style="margin-top:10%">Receive:</h5>
-        <div id="log3"></div>
+        <div class="pre-scrollable" id="log3"></div>
       </div>
       <div class="col-sm-4">
         <h2>part 3</h2>
