--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
   <script type="text/javascript" charset="utf-8">
     $(document).ready(function() {
-        $('dtBasicExample').DataTable();
         var x = new Array();
         var y = new Array();
         var trace;
@@ -32,6 +31,7 @@
         socket.on('json_data', function(msg) {
         console.log(msg.data);
         var json_string = jQuery.parseJSON(msg.data);
+        console.log($('input[name=optradio]:checked').val());
         $('#log').append(+json_string.temperature_C+ ', ' +json_string.temperature_F+ ', ' +json_string.humidity+ ', '  +json_string.ppm+'<br>').html();
         x.push(parseFloat(i++));
         x_h.push(parseFloat(j++));
@@ -78,12 +78,17 @@
         
         socket.on('db_data', function(msg) {
         for(var i = 0; i < (msg.data).length; i++, j++){
-            //pridat podmienku, ci chcem celsius alebo fahrenheit(zmenim 0 na 1)
-            y.push(parseFloat(msg.data[i][0]));
+            if(($('input[name=optradio]:checked').val()) == "c"){
+                y.push(parseFloat(msg.data[i][0]));
+                $('#log2').append('Teplota(C): '+msg.data[i][0]+ ' Vlhkost: ' +msg.data[i][2]+  ' ppm: ' +msg.data[i][3]+ '<br>').html(); 
+            }
+            else{
+                y.push(parseFloat(msg.data[i][1]));
+                $('#log2').append('Teplota(F): '+msg.data[i][0]+ ' Vlhkost: ' +msg.data[i][2]+  ' ppm: ' +msg.data[i][3]+ '<br>').html();  
+            }
             y_h.push(parseFloat(msg.data[i][2]));
             x.push(parseFloat(i));
             x_h.push(parseFloat(j));
-            $('#log2').append(+msg.data[i][0]+ ', ' +msg.data[i][1]+ ', ' +msg.data[i][2]+  ', ' +msg.data[i][3]+ '<br>').html(); 
         }
         //teplota
         trace = {
@@ -262,12 +267,12 @@
         <h5 style="margin-top:5%">Voľba jednotiek</h5>
         <div class="form-check">
           <label class="form-check-label">
-            <input type="radio" class="form-check-input" name="optradio">Fahrenheity
+            <input type="radio" class="form-check-input" name="optradio" value ="f">Fahrenheity
           </label>
         </div>
         <div class="form-check">
           <label class="form-check-label">
-            <input type="radio" class="form-check-input" name="optradio">Stupne Celzia
+            <input type="radio" class="form-check-input" name="optradio" value ="c" checked="checked">Stupne Celzia
           </label>
         </div>
         <div id="plotdiv" style="width:600px;height:250px;"></div>
