--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="dark-mode.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
@@ -13,6 +14,7 @@
   <script src="static/libs/plotly-latest.min.js"></script>
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
   <script src="static/libs/gauge.min.js"></script>
+  <script src="dark-mode-switch.min.js"></script>
   <script type="text/javascript" charset="utf-8">
     $(document).ready(function() {
         var x = new Array();
@@ -366,9 +368,17 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
-    <ul class="navbar-nav">
+    <ul class="navbar-nav mr-auto">
       <li class="nav-item">
         <a class="nav-link" href="#database">Zobrazenie údajov</a>
+      </li>
+    </ul>
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <div class="custom-control custom-switch">
+          <input type="checkbox" class="custom-control-input " id="darkSwitch" />
+          <label class="custom-control-label text-white" for="darkSwitch">Dark Mode</label>
+        </div>
       </li>  
     </ul>
   </div>  
@@ -377,7 +387,7 @@
   <section id="Data">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-md-5 text-center justify-content-center align-items-center"style="margin-top:2.5%">
+        <div class="col-md-6 text-center justify-content-center align-items-center"style="margin-top:2.5%">
           <div class="row">
             <div <div class="col-sm-6">
               <h2>Ovládanie</h2>
@@ -392,18 +402,18 @@
               <h2>Odoslanie údajov</h2>
               <form id="emit" method="POST" action='#' style="margin-top:10%">
                   <input type="text" name="emit_value" id="emit_value" placeholder="Rozdiel/vlhkost">
-                  <input type="submit" value="Send">
+                  <input type="submit"  class="btn btn-info" value="Send">
               </form>
             </div>
           </div>
-          <!-- POZOR POZOR, NOVA VEC -->
+          <!---
           <div class="text-center justify-content-center align-items-center" style="margin-top:12%">
             <div id="plotdiv" style="width:600px;height:250px;"></div>
             <canvas style="margin-top:5%" id="gauge"></canvas>
-          </div>
+          </div>-->
           <hr class="d-sm-none">
         </div>
-        <div class="col-md-4 text-center justify-content-center align-items-center" style="margin-top:2.5%">
+        <div class="col-md-3 text-center justify-content-center align-items-center" style="margin-top:2.5%">
           <h2>Grafy</h2>
           <h5 style="margin-top:5%">Voľba jednotiek</h5>
           <div class="form-check">
@@ -416,15 +426,33 @@
               <input type="radio" class="form-check-input" name="optradio" value ="c" checked="checked">Stupne Celzia
             </label>
           </div>
+          <!---
           <div class="text-center justify-content-center align-items-center" style="margin-top:10%">
             <div id="plotdiv2" class="text-center justify-content-center align-items-center" style="width:600px;height:250px;"></div>
             <canvas style="margin-top:5%" id="gauge_h"></canvas>
-          </div>
+          </div>-->
         </div>
         <div class="col-md-3" style="margin-top:2.5%">
           <h2>Výpis údajov</h2>
           <div style="margin-top:10%" class="pre-scrollable" id="log"></div>
         </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4" style="margin-top:2.5%">
+          <p>placeholder</p>
+          <div class="text-center justify-content-center align-items-center" style="margin-top:12%">
+            <div id="plotdiv" style="width:600px;height:250px;"></div>
+            <canvas style="margin-top:5%" id="gauge"></canvas>
+          </div>
+        </div>
+        <div class="col-md-5" style="margin-top:2.5%">
+          <p>placeholder</p>
+          <div class="text-center justify-content-center align-items-center" style="margin-top:10%">
+            <div id="plotdiv2" class="text-center justify-content-center align-items-center" style="width:600px;height:250px;"></div>
+            <canvas style="margin-top:5%" id="gauge_h"></canvas>
+          </div>
+        </div>
+
       </div>
     </div>
   </section>  
